# nexus

./: .env.example  .gitignore  BRIEF.md  BUNDLE.md  DIST.md  IDIOTS_GUIDE.md  IMPROVEMENT_PLAN.md  PLAN.md  README.md  nexus_bundle.py  plan_refactor.md
nexus/: README.md  __init__.py  benchmark_media_household.py  benchmark_media_household_report.py  benchmark_phase1.py  benchmark_report.py  config.py  env.py  execution_worker.py  lazy_tools.py  pyproject.toml  runner.py  selftest.py  server.py  test_benchmark_media_household.py  test_benchmark_media_household_report.py  test_benchmark_phase1.py  test_benchmark_report.py  test_client_urls.py  test_config.py  test_helpers.py  test_lazy_tools.py  test_n8n_tools.py  test_runner.py  test_runner_bounds.py  test_starling_tools.py  test_tool_catalog.py  test_tool_catalog_incremental.py  tool_catalog.py  tool_execution_worker.py  tool_policy.py  tool_registry.py
nexus/settings/: __init__.py  _helpers.py  confluence.py  gitlab.py  jenkins.py  jira.py  runner.py  sonarr.py  sourcegraph.py  talos.py  tautulli.py
tool_packs/nexus_tools_jira/: README.md  pyproject.toml
tool_packs/nexus_tools_jira/nexus_tools_jira/: client.py  get_issue_status.py
tool_packs/nexus_tools_n8n/: README.md  pyproject.toml
tool_packs/nexus_tools_n8n/nexus_tools_n8n/: __init__.py  activate_workflow.py  add_project_users.py  change_project_user_role.py  change_user_role.py  create_variable.py  delete_data_table_rows.py  delete_execution.py  delete_project.py  delete_user.py  get_data_table.py  get_data_table_rows.py  get_execution.py  get_execution_tags.py  get_projects.py  get_user.py  get_users.py  get_variables.py  get_workflow_tags.py  get_workflow_version.py  get_workflows.py  insert_data_table_rows.py  list_project_users.py  retry_execution.py  stop_execution.py  transfer_workflow.py  update_execution_tags.py  update_project.py  update_tag.py  update_variable.py  update_workflow.py  update_workflow_tags.py
tool_packs/nexus_tools_sonarr/: README.md  pyproject.toml
tool_packs/nexus_tools_sonarr/nexus_tools_sonarr/: PLAN.md  api.py  client.py  create_delayprofile.py  create_downloadclient_action_by_name.py  create_history_failed_by_id.py  create_importlist.py  create_importlist_testall.py  create_indexer_action_by_name.py  create_indexer_test_tool.py  create_indexer_testall.py  create_metadata_test_tool.py  create_notification.py  create_notification_action_by_name.py  create_notification_test_tool.py  create_qualityprofile.py  create_queue_grab_by_id.py  create_release_push.py  create_rootfolder.py  create_series.py  create_series_import.py  create_system_backup_restore_upload.py  create_system_restart.py  delete_autotagging_by_id.py  delete_customfilter_by_id.py  delete_downloadclient_by_id.py  delete_episodefile_bulk.py  delete_importlist_by_id.py  delete_importlistexclusion_by_id.py  delete_metadata_by_id.py  delete_queue_bulk.py  (+78 more)
(+640 files in other folders)
