[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-tools-sonarr"
version = "0.1.0"
description = "Nexus tool pack: sonarr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nexus-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_tools_sonarr*"]
